# microgradpp

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  a.out  cmake_install.cmake  main.cpp  microgradpp.h
docs/html/: _activation_8hpp_source.html  _autograd_8hpp_source.html  _layer_8hpp_source.html  _neuron_8hpp_source.html  _tensor_8hpp_source.html  _trainer_8hpp_source.html  _type_defs_8hpp_source.html  _value_8hpp_source.html  annotated.html  classes.html  classmicrogradpp_1_1_activation.html  classmicrogradpp_1_1_autograd-members.html  classmicrogradpp_1_1_autograd.html  classmicrogradpp_1_1_layer-members.html  classmicrogradpp_1_1_layer.html  classmicrogradpp_1_1_m_l_p-members.html  classmicrogradpp_1_1_m_l_p.html  classmicrogradpp_1_1_neuron-members.html  classmicrogradpp_1_1_neuron.html  classmicrogradpp_1_1_tensor-members.html  classmicrogradpp_1_1_tensor.html  classmicrogradpp_1_1_value-members.html  classmicrogradpp_1_1_value.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  structmicrogradpp_1_1_hash-members.html  structmicrogradpp_1_1_hash.html  structmicrogradpp_1_1_tape_entry.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_6.js  variables_7.js
docs/latex/: _activation_8hpp_source.tex  _autograd_8hpp_source.tex  _layer_8hpp_source.tex  _neuron_8hpp_source.tex  _tensor_8hpp_source.tex  _trainer_8hpp_source.tex  _type_defs_8hpp_source.tex  _value_8hpp_source.tex  annotated.tex  classmicrogradpp_1_1_activation.tex  classmicrogradpp_1_1_autograd.tex  classmicrogradpp_1_1_layer.tex  classmicrogradpp_1_1_m_l_p.tex  classmicrogradpp_1_1_neuron.tex  classmicrogradpp_1_1_tensor.tex  classmicrogradpp_1_1_value.eps  classmicrogradpp_1_1_value.tex  files.tex  hierarchy.tex  refman.tex  structmicrogradpp_1_1_hash.tex  structmicrogradpp_1_1_tape_entry.tex
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example_images  example_mlp  images.cpp  memory.cpp  mlp.cpp
html/: _abstract_loss_8hpp.html  _abstract_loss_8hpp__dep__incl.dot  _abstract_loss_8hpp__incl.dot  _abstract_loss_8hpp_source.html  _activation_8hpp.html  _activation_8hpp__dep__incl.dot  _activation_8hpp__incl.dot  _activation_8hpp_source.html  _algorithms_8hpp.html  _algorithms_8hpp__incl.dot  _algorithms_8hpp_source.html  _autograd_8hpp.html  _autograd_8hpp__dep__incl.dot  _autograd_8hpp__incl.dot  _autograd_8hpp_source.html  _base_multi_layer_perceptron_8hpp.html  _base_multi_layer_perceptron_8hpp__incl.dot  _base_multi_layer_perceptron_8hpp_source.html  _core_linear_8hpp.html  _core_linear_8hpp__dep__incl.dot  _core_linear_8hpp__incl.dot  _core_linear_8hpp_source.html  _core_re_l_u_8hpp.html  _core_re_l_u_8hpp__dep__incl.dot  _core_re_l_u_8hpp__incl.dot  _core_re_l_u_8hpp_source.html  _layer_8hpp_source.html  _loss_functions_8hpp_source.html  _mpp_core_8hpp.html  _mpp_core_8hpp__dep__incl.dot  _mpp_core_8hpp__incl.dot  _mpp_core_8hpp_source.html  _mpp_logging_8hpp_source.html  _neural_net_8hpp_source.html  _neuron_8hpp.html  _neuron_8hpp__dep__incl.dot  _neuron_8hpp__incl.dot  _neuron_8hpp_source.html  _sequential_8hpp.html  _sequential_8hpp__dep__incl.dot  (+108 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  (+27 more)
include/: AbstractLoss.hpp  Activation.hpp  Algorithms.hpp  Autograd.hpp  Example_MLP.hpp  Layer.hpp  LossFunctions.hpp  Neuron.hpp  Tensor.hpp  Trainer.hpp  TypeDefs.hpp  Value.hpp  ValueStack.hpp
include/base/: BaseMultiLayerPerceptron.hpp
include/core/: CoreLinear.hpp  CoreReLU.hpp  CoreTanH.hpp  MppCore.hpp  Sequential.hpp
include/nn/: NeuralNet.hpp
latex/: _abstract_loss_8hpp.tex  _abstract_loss_8hpp.tex.tmp  _abstract_loss_8hpp__dep__incl.dot  _abstract_loss_8hpp__incl.dot  _abstract_loss_8hpp_source.tex  _activation_8hpp.tex  _activation_8hpp__dep__incl.dot  _activation_8hpp__incl.dot  _activation_8hpp_source.tex  _algorithms_8hpp.tex  _algorithms_8hpp__incl.dot  _algorithms_8hpp_source.tex  _autograd_8hpp.tex  _autograd_8hpp__dep__incl.dot  _autograd_8hpp__incl.dot  _autograd_8hpp_source.tex  _base_multi_layer_perceptron_8hpp.tex  _base_multi_layer_perceptron_8hpp__incl.dot  _base_multi_layer_perceptron_8hpp_source.tex  _core_linear_8hpp.tex  _core_linear_8hpp__dep__incl.dot  _core_linear_8hpp__incl.dot  _core_linear_8hpp_source.tex  _core_re_l_u_8hpp.tex  _core_re_l_u_8hpp__dep__incl.dot  _core_re_l_u_8hpp__incl.dot  _core_re_l_u_8hpp_source.tex  _layer_8hpp_source.tex  _loss_functions_8hpp_source.tex  _mpp_core_8hpp.tex  _mpp_core_8hpp__dep__incl.dot  _mpp_core_8hpp__incl.dot  _mpp_core_8hpp_source.tex  _mpp_logging_8hpp_source.tex  _neural_net_8hpp_source.tex  _neuron_8hpp.tex  _neuron_8hpp__dep__incl.dot  _neuron_8hpp__incl.dot  _neuron_8hpp_source.tex  _sequential_8hpp.tex  (+55 more)
scripts/: clobber_headers.py  clobber_headers.sh  microgradpp.h
tests/: CMakeLists.txt  GradTester.hpp  Makefile  Tester.hpp  cmake_install.cmake  run_tests.py  test1.cpp  test1_output.json  testLayer.cpp  testNeuron.cpp  testValue.cpp  test_commands.json  utils.hpp
